2014-08-30  Yu-Jie Lin  <livibetter@gmail.com>
[FILES]
	* add: ChangeLog
	* add: NEWS
	* rename: CHANGES.mkd to docs/CHANGES-OLD.mkd

[main.c]
	* print_help: add for help message
	* main: add -h option for help message