@@ -15,6 +15,6 @@ Changes since 1.0.3 (2014-07-06)
 
 	* add -h for help message
 
-[Bash loadable]
+[td.bash]
 
 	* add -h for help message
